manifests/namespace-capture.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pcap-capture
  labels:
    app.kubernetes.io/part-of: spcg
    spcg.io/tier: capture
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
