manifests/namespace-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pcap-frontend
  labels:
    app.kubernetes.io/part-of: spcg
    spcg.io/tier: frontend
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
