manifests/ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spcg-frontend
  namespace: pcap-frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: spcg.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spcg-ui-portal
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spcg-frontend
                port:
                  number: 80
